// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip hidden 1`] = `null`;

exports[`tooltip shown 1`] = `
<div
  className="tooltip"
>
  <span
    className="message"
  >
    Изменения сохранены
  </span>
</div>
`;

exports[`tooltip with error 1`] = `
<div
  className="tooltip tooltipError"
>
  <span
    className="message"
  >
    Регион не найден, проверьте правильность написания
  </span>
</div>
`;
